# nhl-saves

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.devcontainer/: devcontainer.json
analysis/: 01_eda.py
src/nhl_saves/: api.py  main.py  moneypuck.py  stats.py  store.py  ui.py  venues.py
src/nhl_saves/modeling/: features.py
src/nhl_saves/pages/: 1_Team_Table.py  2_Goalie_Detail.py
tests/: test_api.py  test_stats.py  test_store.py
