[project]
name = "nhl-saves"
version = "0.1.0"
description = "Data application to track NHL goalie saves historically and project saves for the next game based on historical trends"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2.0",
    "plotly>=5.0.0",
    "pyarrow>=14.0.0",
    "requests>=2.32.0",
    "streamlit>=1.35.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nhl_saves"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.2",
]
